# test-commitizen

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml  requirements.txt
.github/: pr-title-checker-config.json
.github/workflows/: bumb-version.yml  main.yml  merge.yml  pr-title-checker-config.json  pr-title-checker.yml  release.yml
src/: main.py
