[tool.poetry]
name = "test-commitizen"
version = "0.2.1"
description = "Test commitizen App"
authors = ["KiWi Dev Team <hola@conkiwi.com>"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.1"
version_files = [
    "pyproject.toml:version",
    "__version__.py"
]

[requires]
python_version = "3.9"
